syntax = "proto3";
package member;
option go_package = "./api/v1/delivery/grpc/proto";  // generated code çš„ full Go import path

message AtomicTokenAuthRequest {
string atomicToken = 1;
}

message AtomicTokenAuthResponse {
string memberUUID = 2;
}

service MemberService {
  rpc VerifyAtomicToken(AtomicTokenAuthRequest) returns (AtomicTokenAuthResponse) {};
}